fix: prevent page zooming on Safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,8 @@ body {
 main {
   margin-bottom: 5rem;
 }
+
+/* prevent page zooming on safari */
+input {
+  font-size: 16px;
+}
